apps/imapfilter/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "imapfilter"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - protocol: "TCP"
          port: 143
        - protocol: "TCP"
          port: 993
      to:
        - ipBlock:
            cidr: "0.0.0.0/0"
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
          podSelector:
            matchLabels:
              k8s-app: "kube-dns"
      ports:
        - port: 53
          protocol: "UDP"
        - port: 53
          protocol: "TCP"
  ingress: []
